@@ -31,6 +31,8 @@ BETA PUBLIC RELEASE VERSION 0.4.1       XX-XX-XX
       as input.  New XML files can be found in tools/conversion/param/vparam.
     * Added XML support for reading "PQR" files in XML format.
     * Added support for command line --version and --help flags.	
+    * Added support for XML output options via the --output-file and 
+      --output-format flags.
   - BUG FIXES
     * Updated psize.py to use centers and radii when calculating grid sizes
       (thanks to John Mongan)
